2014-01-07  Ingo Feinerer <feinerer@logic.at>

	* DESCRIPTION (Version): Prepare for CRAN New Year release.

2014-01-05  Ingo Feinerer <feinerer@logic.at>

	* R/matrix.R (findAssocs): Allow multiple and non-existing terms.
	Suggested by Christian Buchta.

	* R/source.R (is.Source): New check for valid source.

2013-12-28  Ingo Feinerer <feinerer@logic.at>

	* R/matrix.R (findAssocs): Make corlimit inclusive.

2013-09-27  Ingo Feinerer <feinerer@logic.at>

	* R/source.R: Allow multiple URIs for URISource.

2013-09-19  Ingo Feinerer <feinerer@logic.at>

	* R/source.R (Source): New Source constructor.

2013-08-26  Ingo Feinerer <feinerer@logic.at>

	* R/source.R (DirSource): Report non-existent or non-readable files.
	Suggested by Ajinkya Kale and Milan Bouchet-Valat.

2013-08-19  Ingo Feinerer <feinerer@logic.at>

	* R/corpus.R (setOldClass): Do not register VCorpus as S4 class
	anymore.

	* R/doc.R (setOldClass): Do not register PlainTextDocument as S4 class
	anymore.

2013-08-09  Ingo Feinerer <feinerer@logic.at>

	* DESCRIPTION (License): Changed to GPL-3.

2013-07-25  Ingo Feinerer <feinerer@logic.at>

	* R/complete.R (stemCompletion): Report NA instead of error when no
	completion can be found by the prevalent heuristic. Suggested by Hugh
	Devlin.

2013-07-10  Ingo Feinerer <feinerer@logic.at>

	* R/reader.R (readPDF): Use tm:::pdfinfo() (which needs the pdfinfo
	command line tool) instead of tools:::pdf_info().

2013-04-11  Ingo Feinerer <feinerer@logic.at>

	* R/transform.R (removeWords): Use PCRE UCP to use Unicode properties
	to determine character types.

2012-12-14  Ingo Feinerer <feinerer@logic.at>

	* R/matrix.R (TermDocumentMatrix): Ensure dimnames of type character
	when generating a simple_triplet_matrix. Reported by Arho Suominen. 

2012-12-10  Ingo Feinerer <feinerer@logic.at>

	* man/tm_reduce.Rd: Document right to left folding order. Adapt
	example as well. Suggested by Mark Rosenstein.

2012-12-04  Ingo Feinerer <feinerer@logic.at>
