@@ -1,7 +1,7 @@
 Package: tm
 Title: Text Mining Package
 Version: 0.5-10
-Date: 2014-01-07
+Date: 2014-01-28
 Authors@R: c(person("Ingo", "Feinerer", role = c("aut", "cre"),
                     email = "feinerer@logic.at"),
              person("Kurt", "Hornik", role = "aut"),
